docs/versioned_docs/version-1.0.1/usage/sending_messages.mdx
---
title: "Sending Messages"
---
<!-- Generated by port_legacy_docs.py v1 from v1.0.1 (b57bf5af211dbe012560aa8fee8ea24b405b7ee4). Historical snapshot—do not edit directly. -->
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

`slackblocks` is designed primarily for use with either the [`slack-sdk`](https://pypi.org/project/slack-sdk/) or (legacy) [`slackclient`](https://pypi.org/project/slackclient/) Python packages. Usage of `slackblocks` remains identical regardless of which Slack client library you're using.

While there's nothing stopping you from sending the rendered messages directly with `curl` or `requests`, we recommend using the `**` (dictionary unpacking)operator to unpack `slackblocks` `Messages` directly into the Slack `client`'s `chat_postMessage` function.

An example of this is provided below along with the JSON result of rendering the message, an equivalent `curl` command, and finally the result of the message as it appears in the Slack user interface.

<Tabs>
<TabItem value="python-slackblocks" label="Python (`slackblocks`)">

```python
from os import environ
from slack import WebClient
from slackblocks import Message, SectionBlock


client = WebClient(token=environ["SLACK_API_TOKEN"])
block = SectionBlock("Hello, world!")
message = Message(channel="#general", blocks=block)

response = client.chat_postMessage(**message)
```

</TabItem>
<TabItem value="json-message" label="JSON Message">

```json
{
    "channel": "#general",
    "mrkdwn": true,
    "blocks": [
        {
            "type": "section",
            "block_id": "992ceb6b-9ad4-496b-b8e6-1bd8a632e8b3",
            "text": {
                "type": "mrkdwn",
                "text": "Hello, world!"
            }
        }
    ]
}
```
* Note that the `block_id` field is a pseudorandomly generated UUID. You can pass a value to `Block` constructors should you desire deterministic `Blocks`.

</TabItem>
<TabItem value="equivalent-curl-command" label="Equivalent `curl` Command">

```bash
curl -H "Content-type: application/json" \
--data '{"channel":"#general","blocks":[{"type":"section", "block_id": "992ceb6b-9ad4-496b-b8e6-1bd8a632e8b3", "text":{"type":"mrkdwn","text":"Hello, world"}}]}' \
-H "Authorization: Bearer ${SLACK_API_TOKEN}" \
-X POST https://slack.com/api/chat.postMessage
```

</TabItem>
<TabItem value="slack-ui-output" label="Slack UI Output">

![Hello World Slack Image](/img/legacy/e571b02afbd2c2af10a05d1d4cf23ef23b939f92/hello_world.png)

</TabItem>
</Tabs>
